fixed issue with open positions spacing

--- a/client/src/components/Styles/general.css
+++ b/client/src/components/Styles/general.css
@@ -783,7 +783,7 @@ Page popup style rules
   box-shadow: 0px 0px 10px 0px var(--shadow-color);
   /* max-width: 1321px; */
   max-width: 1121px;
-  max-height: 849px;
+  max-height: 869px;
   opacity: 100%;
   z-index: 3;
   /* height: 849px; */
